trunk/Archive2/25/ca6270768103a8/output
main.cpp:11:5: error: no matching function for call to 'fun'
    fun( x );
    ^~~
main.cpp:5:6: note: candidate template ignored: couldn't infer template argument 'N'
void fun ( T arr[N] ) {
     ^
1 error generated.
